--- a/package.json
+++ b/package.json
@@ -21,16 +21,21 @@
     "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-bootsplash": "^4.7.1",
     "react-native-gesture-handler": "^2.10.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^15.0.1",
+    "react-native-notifications": "^4.3.3",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
     "react-native-splash-screen": "^3.3.0",
     "react-redux": "^8.0.5",
-    "uuid": "^9.0.0"
+    "redux-devtools-extension": "^2.13.9",
+    "uuid": "^9.0.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
